// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyDockScreenScreen should render TransakIntro Component 1`] = `
<ContextProvider
  value={
    Object {
      "borders": Object {
        "1px": "1px solid",
        "2px": "2px solid",
        "4px": "4px solid",
        "none": 0,
      },
      "breakpoints": Object {
        "base": 0,
        "lg": 992,
        "md": 768,
        "sm": 480,
        "xl": 1280,
      },
      "colors": Object {
        "amber": Object {
          "100": "#fef3c7",
          "200": "#fde68a",
          "300": "#fcd34d",
          "400": "#fbbf24",
          "50": "#fffbeb",
          "500": "#f59e0b",
          "600": "#d97706",
          "700": "#b45309",
          "800": "#92400e",
          "900": "#78350f",
        },
        "black": "#000000",
        "blue": Object {
          "100": "#dbeafe",
          "200": "#bfdbfe",
          "300": "#93c5fd",
          "400": "#60a5fa",
          "50": "#eff6ff",
          "500": "#3b82f6",
          "600": "#2563eb",
          "700": "#1d4ed8",
          "800": "#1e40af",
          "900": "#1e3a8a",
        },
        "blueGray": Object {
          "100": "#f1f5f9",
          "200": "#e2e8f0",
          "300": "#cbd5e1",
          "400": "#94a3b8",
          "50": "#f8fafc",
          "500": "#64748b",
          "600": "#475569",
          "700": "#334155",
          "800": "#1e293b",
          "900": "#0f172a",
        },
        "contrastThreshold": 7,
        "coolGray": Object {
          "100": "#f3f4f6",
          "200": "#e5e7eb",
          "300": "#d1d5db",
          "400": "#9ca3af",
          "50": "#f9fafb",
          "500": "#6b7280",
          "600": "#4b5563",
          "700": "#374151",
          "800": "#1f2937",
          "900": "#111827",
        },
        "cyan": Object {
          "100": "#cffafe",
          "200": "#a5f3fc",
          "300": "#67e8f9",
          "400": "#22d3ee",
          "50": "#ecfeff",
          "500": "#06b6d4",
          "600": "#0891b2",
          "700": "#0e7490",
          "800": "#155e75",
          "900": "#164e63",
        },
        "danger": Object {
          "100": "#ffe4e6",
          "200": "#fecdd3",
          "300": "#fda4af",
          "400": "#fb7185",
          "50": "#fff1f2",
          "500": "#f43f5e",
          "600": "#e11d48",
          "700": "#be123c",
          "800": "#9f1239",
          "900": "#881337",
        },
        "dark": Object {
          "100": "#27272a",
          "200": "#3f3f46",
          "300": "#52525b",
          "400": "#71717a",
          "50": "#18181b",
          "500": "#a1a1aa",
          "600": "#d4d4d8",
          "700": "#e4e4e7",
          "800": "#f4f4f5",
          "900": "#fafafa",
        },
        "darkBlue": Object {
          "100": "#addbff",
          "200": "#7cc2ff",
          "300": "#4aa9ff",
          "400": "#1a91ff",
          "50": "#dbf4ff",
          "500": "#0077e6",
          "600": "#005db4",
          "700": "#004282",
          "800": "#002851",
          "900": "#000e21",
        },
        "darkText": "#000000",
        "emerald": Object {
          "100": "#d1fae5",
          "200": "#a7f3d0",
          "300": "#6ee7b7",
          "400": "#34d399",
          "50": "#ecfdf5",
          "500": "#10b981",
          "600": "#059669",
          "700": "#047857",
          "800": "#065f46",
          "900": "#064e3b",
        },
        "error": Object {
          "100": "#fee2e2",
          "200": "#fecaca",
          "300": "#fca5a5",
          "400": "#f87171",
          "50": "#fef2f2",
          "500": "#ef4444",
          "600": "#dc2626",
          "700": "#b91c1c",
          "800": "#991b1b",
          "900": "#7f1d1d",
        },
        "fuchsia": Object {
          "100": "#fae8ff",
          "200": "#f5d0fe",
          "300": "#f0abfc",
          "400": "#e879f9",
          "50": "#fdf4ff",
          "500": "#d946ef",
          "600": "#c026d3",
          "700": "#a21caf",
          "800": "#86198f",
          "900": "#701a75",
        },
        "gray": Object {
          "100": "#f4f4f5",
          "200": "#e4e4e7",
          "300": "#d4d4d8",
          "400": "#a1a1aa",
          "50": "#fafafa",
          "500": "#71717a",
          "600": "#52525b",
          "700": "#3f3f46",
          "800": "#27272a",
          "900": "#18181b",
        },
        "green": Object {
          "100": "#dcfce7",
          "200": "#bbf7d0",
          "300": "#86efac",
          "400": "#4ade80",
          "50": "#f0fdf4",
          "500": "#22c55e",
          "600": "#16a34a",
          "700": "#15803d",
          "800": "#166534",
          "900": "#14532d",
        },
        "indigo": Object {
          "100": "#e0e7ff",
          "200": "#c7d2fe",
          "300": "#a5b4fc",
          "400": "#818cf8",
          "50": "#eef2ff",
          "500": "#6366f1",
          "600": "#4f46e5",
          "700": "#4338ca",
          "800": "#3730a3",
          "900": "#312e81",
        },
        "info": Object {
          "100": "#e0f2fe",
          "200": "#bae6fd",
          "300": "#7dd3fc",
          "400": "#38bdf8",
          "50": "#f0f9ff",
          "500": "#0ea5e9",
          "600": "#0284c7",
          "700": "#0369a1",
          "800": "#075985",
          "900": "#0c4a6e",
        },
        "light": Object {
          "100": "#f5f5f4",
          "200": "#e7e5e4",
          "300": "#d6d3d1",
          "400": "#a8a29e",
          "50": "#fafaf9",
          "500": "#78716c",
          "600": "#57534e",
          "700": "#44403c",
          "800": "#292524",
          "900": "#1c1917",
        },
        "lightBlue": Object {
          "100": "#e0f2fe",
          "200": "#bae6fd",
          "300": "#7dd3fc",
          "400": "#38bdf8",
          "50": "#f0f9ff",
          "500": "#0ea5e9",
          "600": "#0284c7",
          "700": "#0369a1",
          "800": "#075985",
          "900": "#0c4a6e",
        },
        "lightText": "#FFFFFF",
        "lime": Object {
          "100": "#ecfccb",
          "200": "#d9f99d",
          "300": "#bef264",
          "400": "#a3e635",
          "50": "#f7fee7",
          "500": "#84cc16",
          "600": "#65a30d",
          "700": "#4d7c0f",
          "800": "#3f6212",
          "900": "#365314",
        },
        "muted": Object {
          "100": "#f5f5f5",
          "200": "#e5e5e5",
          "300": "#d4d4d4",
          "400": "#a3a3a3",
          "50": "#fafafa",
          "500": "#737373",
          "600": "#525252",
          "700": "#404040",
          "800": "#262626",
          "900": "#171717",
        },
        "orange": Object {
          "100": "#ffedd5",
          "200": "#fed7aa",
          "300": "#fdba74",
          "400": "#fb923c",
          "50": "#fff7ed",
          "500": "#f97316",
          "600": "#ea580c",
          "700": "#c2410c",
          "800": "#9a3412",
          "900": "#7c2d12",
        },
        "pink": Object {
          "100": "#fce7f3",
          "200": "#fbcfe8",
          "300": "#f9a8d4",
          "400": "#f472b6",
          "50": "#fdf2f8",
          "500": "#ec4899",
          "600": "#db2777",
          "700": "#be185d",
          "800": "#9d174d",
          "900": "#831843",
        },
        "primary": Object {
          "100": "#cffafe",
          "200": "#a5f3fc",
          "300": "#67e8f9",
          "400": "#22d3ee",
          "50": "#ecfeff",
          "500": "#06b6d4",
          "600": "#0891b2",
          "700": "#0e7490",
          "800": "#155e75",
          "900": "#164e63",
        },
        "purple": Object {
          "100": "#f3e8ff",
          "200": "#e9d5ff",
          "300": "#d8b4fe",
          "400": "#c084fc",
          "50": "#faf5ff",
          "500": "#a855f7",
          "600": "#9333ea",
          "700": "#7e22ce",
          "800": "#6b21a8",
          "900": "#581c87",
        },
        "red": Object {
          "100": "#fee2e2",
          "200": "#fecaca",
          "300": "#fca5a5",
          "400": "#f87171",
          "50": "#fef2f2",
          "500": "#ef4444",
          "600": "#dc2626",
          "700": "#b91c1c",
          "800": "#991b1b",
          "900": "#7f1d1d",
        },
        "rose": Object {
          "100": "#ffe4e6",
          "200": "#fecdd3",
          "300": "#fda4af",
          "400": "#fb7185",
          "50": "#fff1f2",
          "500": "#f43f5e",
          "600": "#e11d48",
          "700": "#be123c",
          "800": "#9f1239",
          "900": "#881337",
        },
        "secondary": Object {
          "100": "#fce7f3",
          "200": "#fbcfe8",
          "300": "#f9a8d4",
          "400": "#f472b6",
          "50": "#fdf2f8",
          "500": "#ec4899",
          "600": "#db2777",
          "700": "#be185d",
          "800": "#9d174d",
          "900": "#831843",
        },
        "success": Object {
          "100": "#dcfce7",
          "200": "#bbf7d0",
          "300": "#86efac",
          "400": "#4ade80",
          "50": "#f0fdf4",
          "500": "#22c55e",
          "600": "#16a34a",
          "700": "#15803d",
          "800": "#166534",
          "900": "#14532d",
        },
        "teal": Object {
          "100": "#ccfbf1",
          "200": "#99f6e4",
          "300": "#5eead4",
          "400": "#2dd4bf",
          "50": "#f0fdfa",
          "500": "#14b8a6",
          "600": "#0d9488",
          "700": "#0f766e",
          "800": "#115e59",
          "900": "#134e4a",
        },
        "tertiary": Object {
          "100": "#d1fae5",
          "200": "#a7f3d0",
          "300": "#6ee7b7",
          "400": "#34d399",
          "50": "#ecfdf5",
          "500": "#10b981",
          "600": "#059669",
          "700": "#047857",
          "800": "#065f46",
          "900": "#064e3b",
        },
        "trueGray": Object {
          "100": "#f5f5f5",
          "200": "#e5e5e5",
          "300": "#d4d4d4",
          "400": "#a3a3a3",
          "50": "#fafafa",
          "500": "#737373",
          "600": "#525252",
          "700": "#404040",
          "800": "#262626",
          "900": "#171717",
        },
        "violet": Object {
          "100": "#ede9fe",
          "200": "#ddd6fe",
          "300": "#c4b5fd",
          "400": "#a78bfa",
          "50": "#f5f3ff",
          "500": "#8b5cf6",
          "600": "#7c3aed",
          "700": "#6d28d9",
          "800": "#5b21b6",
          "900": "#4c1d95",
        },
        "warmGray": Object {
          "100": "#f5f5f4",
          "200": "#e7e5e4",
          "300": "#d6d3d1",
          "400": "#a8a29e",
          "50": "#fafaf9",
          "500": "#78716c",
          "600": "#57534e",
          "700": "#44403c",
          "800": "#292524",
          "900": "#1c1917",
        },
        "warning": Object {
          "100": "#ffedd5",
          "200": "#fed7aa",
          "300": "#fdba74",
          "400": "#fb923c",
          "50": "#fff7ed",
          "500": "#f97316",
          "600": "#ea580c",
          "700": "#c2410c",
          "800": "#9a3412",
          "900": "#7c2d12",
        },
        "white": "#FFFFFF",
        "yellow": Object {
          "100": "#fef9c3",
          "200": "#fef08a",
          "300": "#fde047",
          "400": "#facc15",
          "50": "#fefce8",
          "500": "#eab308",
          "600": "#ca8a04",
          "700": "#a16207",
          "800": "#854d0e",
          "900": "#713f12",
        },
      },
      "components": Object {
        "Accordion": Object {
          "baseStyle": [Function],
        },
        "AccordionDetails": Object {
          "baseStyle": Object {
            "p": 3,
          },
        },
        "AccordionIcon": Object {},
        "AccordionItem": Object {},
        "AccordionSummary": Object {
          "baseStyle": [Function],
        },
        "Actionsheet": Object {
          "defaultProps": Object {
            "size": "full",
          },
        },
        "ActionsheetContent": Object {
          "baseStyle": Object {
            "_dragIndicator": Object {
              "bg": "coolGray.400",
              "borderRadius": 2,
              "height": 1,
              "width": 9,
            },
            "alignItems": "center",
            "borderRadius": "none",
            "p": 2,
            "roundedTop": 10,
          },
        },
        "ActionsheetItem": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "variant": "unstyled",
          },
        },
        "Alert": Object {
          "baseStyle": Object {
            "_actionProps": Object {
              "alignSelf": "center",
              "ml": "auto",
            },
            "_text": Object {
              "color": "gray.700",
              "fontSize": "sm",
              "lineHeight": 5,
            },
            "alignItems": "center",
            "borderRadius": "md",
            "justifyContent": "flex-start",
            "p": 3,
            "space": 3,
          },
          "defaultProps": Object {
            "colorScheme": "primary",
            "variant": "subtle",
          },
          "variants": Object {
            "left-accent": [Function],
            "outline": [Function],
            "outline-light": [Function],
            "solid": [Function],
            "subtle": [Function],
            "top-accent": [Function],
          },
        },
        "AlertDescription": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "sm",
            },
            "flexShrink": 1,
          },
        },
        "AlertIcon": Object {
          "baseStyle": Object {
            "size": 6,
          },
        },
        "AlertTitle": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "md",
              "fontWeight": "bold",
              "lineHeight": 5,
            },
          },
        },
        "AppBar": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
          },
        },
        "Avatar": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "size": "md",
          },
          "sizes": Object {
            "2xl": Object {
              "fontSize": "3xl",
              "height": "32",
              "width": "32",
            },
            "2xs": Object {
              "fontSize": "xs",
              "height": "4",
              "width": "4",
            },
            "full": Object {
              "fontSize": "4xl",
              "height": "100%",
              "width": "100%",
            },
            "lg": Object {
              "fontSize": "xl",
              "height": "16",
              "width": "16",
            },
            "md": Object {
              "fontSize": "lg",
              "height": "12",
              "width": "12",
            },
            "sm": Object {
              "fontSize": "md",
              "height": "8",
              "width": "8",
            },
            "xl": Object {
              "fontSize": "2xl",
              "height": "24",
              "width": "24",
            },
            "xs": Object {
              "fontSize": "sm",
              "height": "6",
              "width": "6",
            },
          },
        },
        "AvatarBadge": Object {
          "baseStyle": [Function],
        },
        "AvatarGroup": Object {
          "baseStyle": [Function],
        },
        "Badge": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "xs",
              "fontWeight": "bold",
            },
            "px": 1,
          },
          "defaultProps": Object {
            "colorScheme": "muted",
            "variant": "subtle",
          },
          "variants": Object {
            "outline": [Function],
            "solid": [Function],
            "subtle": [Function],
          },
        },
        "Box": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Breadcrumb": Object {
          "baseStyle": Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "auto",
            "width": "auto",
          },
          "defaultProps": Object {
            "direction": "row",
            "wrap": "wrap",
          },
        },
        "Button": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
            "variant": "solid",
          },
          "sizes": Object {
            "lg": Object {
              "_text": Object {
                "fontSize": "lg",
              },
              "px": 6,
              "py": 3,
            },
            "md": Object {
              "_text": Object {
                "fontSize": "md",
              },
              "px": 4,
              "py": 3,
            },
            "sm": Object {
              "_text": Object {
                "fontSize": "sm",
              },
              "px": 4,
              "py": 2,
            },
            "xs": Object {
              "_text": Object {
                "fontSize": "xs",
              },
              "px": 2,
              "py": 1,
            },
          },
          "variants": Object {
            "ghost": [Function],
            "link": [Function],
            "outline": [Function],
            "solid": [Function],
            "unstyled": [Function],
          },
        },
        "ButtonGroup": Object {
          "baseStyle": Object {
            "direction": "row",
          },
          "defaultProps": Object {
            "space": 2,
          },
        },
        "Center": Object {
          "sizes": Object {
            "2xl": Object {
              "height": 40,
              "width": 40,
            },
            "lg": Object {
              "height": 24,
              "width": 24,
            },
            "md": Object {
              "height": 16,
              "width": 16,
            },
            "sm": Object {
              "height": 12,
              "width": 12,
            },
            "xl": Object {
              "height": 32,
              "width": 32,
            },
            "xs": Object {
              "height": 10,
              "width": 10,
            },
          },
        },
        "Checkbox": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "defaultIsChecked": false,
            "size": "sm",
          },
          "sizes": Object {
            "lg": Object {
              "_icon": Object {
                "size": 6,
              },
              "_text": Object {
                "fontSize": "xl",
              },
            },
            "md": Object {
              "_icon": Object {
                "size": 5,
              },
              "_text": Object {
                "fontSize": "lg",
              },
            },
            "sm": Object {
              "_icon": Object {
                "size": 4,
              },
              "_text": Object {
                "fontSize": "md",
              },
            },
          },
        },
        "CircularProgress": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "lg",
            "thickness": 8,
          },
          "sizes": Object {
            "2xl": Object {
              "height": 32,
              "width": 32,
            },
            "lg": Object {
              "height": 20,
              "width": 20,
            },
            "md": Object {
              "height": 16,
              "width": 16,
            },
            "sm": Object {
              "height": 8,
              "width": 8,
            },
            "xl": Object {
              "height": 24,
              "width": 24,
            },
            "xs": Object {
              "height": 6,
              "width": 6,
            },
          },
        },
        "Code": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontFamily": "Courier",
              "fontSize": "sm",
            },
            "borderRadius": "sm",
            "px": 2,
            "py": 1,
          },
          "defaultProps": Object {
            "colorScheme": "muted",
            "variant": "subtle",
          },
          "variants": Object {
            "outline": [Function],
            "solid": [Function],
            "subtle": [Function],
          },
        },
        "Container": Object {
          "baseStyle": Object {
            "maxWidth": "80%",
          },
        },
        "Divider": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "orientation": "horizontal",
            "size": 1,
          },
        },
        "FAB": Object {
          "baseStyle": Object {
            "shadow": 7,
          },
          "defaultProps": Object {
            "colorScheme": "primary",
            "p": 4,
            "placement": "bottom-right",
            "placementProps": Object {
              "bottom-left": Object {
                "bottom": 4,
                "left": 4,
                "position": "absolute",
              },
              "bottom-right": Object {
                "bottom": 4,
                "position": "absolute",
                "right": 4,
              },
              "top-left": Object {
                "left": 4,
                "position": "absolute",
                "top": 12,
              },
              "top-right": Object {
                "position": "absolute",
                "right": 4,
                "top": 12,
              },
            },
            "rounded": "full",
            "variant": "solid",
            "zIndex": 20,
          },
        },
        "Fade": Object {
          "defaultProps": Object {
            "entryDuration": 500,
            "exitDuration": 500,
          },
        },
        "FlatList": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Flex": Object {
          "defaultProps": Object {
            "flexDirection": "column",
          },
        },
        "FormControl": Object {},
        "FormControlErrorMessage": Object {
          "baseStyle": Object {
            "_text": Object {
              "color": "error.400",
              "fontSize": "xs",
            },
            "mt": 2,
          },
        },
        "FormControlHelperText": Object {
          "baseStyle": [Function],
        },
        "FormControlLabel": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "md",
            },
            "astrickColor": "error.400",
            "mb": 2,
            "mr": 3,
          },
        },
        "HStack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Heading": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "size": "xl",
          },
          "sizes": Object {
            "2xl": Object {
              "fontSize": Array [
                "4xl",
                null,
                "5xl",
              ],
            },
            "3xl": Object {
              "fontSize": Array [
                "5xl",
                null,
                "6xl",
              ],
            },
            "4xl": Object {
              "fontSize": Array [
                "6xl",
                null,
                "7xl",
              ],
            },
            "lg": Object {
              "fontSize": Array [
                "2xl",
                null,
                "3xl",
              ],
            },
            "md": Object {
              "fontSize": "xl",
            },
            "sm": Object {
              "fontSize": "md",
            },
            "xl": Object {
              "fontSize": Array [
                "3xl",
                null,
                "4xl",
              ],
            },
            "xs": Object {
              "fontSize": "sm",
            },
          },
        },
        "Icon": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "color": "primary",
            "size": "md",
          },
          "sizes": Object {
            "2xl": 16,
            "3xl": 20,
            "4xl": 24,
            "5xl": 32,
            "6xl": 64,
            "lg": 10,
            "md": 8,
            "sm": 6,
            "xl": 12,
            "xs": 4,
            "xxs": 2,
          },
        },
        "IconButton": Object {
          "baseStyle": Object {
            "borderRadius": "md",
          },
          "defaultProps": Object {
            "size": "md",
            "variant": "ghost",
          },
          "sizes": Object {
            "lg": Object {
              "p": 3,
            },
            "md": Object {
              "p": 2,
            },
            "sm": Object {
              "p": 1,
            },
          },
        },
        "Image": Object {
          "baseStyle": Object {
            "maxWidth": "100%",
          },
          "defaultProps": Object {},
          "sizes": Object {
            "2xl": Object {
              "size": 64,
            },
            "2xs": Object {
              "size": 6,
            },
            "full": Object {
              "size": "100%",
            },
            "lg": Object {
              "size": 24,
            },
            "md": Object {
              "size": 20,
            },
            "sm": Object {
              "size": 16,
            },
            "xl": Object {
              "size": 32,
            },
            "xs": Object {
              "size": 10,
            },
          },
        },
        "Input": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "size": "md",
            "variant": "outline",
          },
          "sizes": Object {
            "2xl": Object {
              "fontSize": "2xl",
            },
            "lg": Object {
              "fontSize": "lg",
            },
            "md": Object {
              "fontSize": "md",
            },
            "sm": Object {
              "fontSize": "sm",
            },
            "xl": Object {
              "fontSize": "xl",
            },
            "xs": Object {
              "fontSize": "xs",
            },
          },
          "variants": Object {
            "filled": [Function],
            "outline": [Function],
            "rounded": [Function],
            "underlined": [Function],
            "unstyled": [Function],
          },
        },
        "Kbd": Object {
          "baseStyle": [Function],
          "defaultProps": Object {},
        },
        "KeyboardAvoidingView": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Link": Object {
          "baseStyle": Object {
            "height": "auto",
            "width": "auto",
          },
        },
        "List": Object {
          "baseStyle": [Function],
        },
        "ListIcon": Object {
          "baseStyle": Object {
            "mr": 8,
            "size": "md",
          },
        },
        "ListItem": Object {
          "baseStyle": Object {
            "borderColor": "gray.300",
            "py": 2,
          },
          "defaultProps": Object {
            "start": 1,
          },
        },
        "Menu": Object {
          "baseStyle": [Function],
        },
        "MenuGroup": Object {
          "baseStyle": [Function],
        },
        "MenuItem": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "_disabled": Object {
              "opacity": 0.5,
            },
          },
        },
        "Modal": Object {
          "baseStyle": Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          "defaultProps": Object {
            "closeOnOverlayClick": true,
            "size": "lg",
          },
          "sizes": Object {
            "full": Object {
              "contentSize": Object {
                "width": "100%",
              },
            },
            "lg": Object {
              "contentSize": Object {
                "width": "90%",
              },
            },
            "md": Object {
              "contentSize": Object {
                "width": "75%",
              },
            },
            "sm": Object {
              "contentSize": Object {
                "width": "60%",
              },
            },
          },
        },
        "ModalBody": Object {
          "baseStyle": [Function],
        },
        "ModalCloseButton": Object {
          "baseStyle": [Function],
        },
        "ModalContent": Object {
          "baseStyle": [Function],
        },
        "ModalFooter": Object {
          "baseStyle": Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "pr": 2,
            "py": 2,
          },
        },
        "ModalHeader": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "xl",
              "fontWeight": "bold",
            },
            "pb": 3,
            "pr": 6,
          },
        },
        "ModalOverlay": Object {
          "baseStyle": Object {
            "bottom": 0,
            "left": 0,
            "opacity": 0.5,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "NumberInput": Object {
          "defaultProps": Object {
            "clampValueOnBlur": true,
            "defaultValue": "0",
            "focusInputOnChange": true,
            "getAriaValueText": true,
            "keepWithinRange": true,
            "max": Infinity,
            "min": -Infinity,
            "size": "sm",
            "step": 1,
          },
        },
        "NumberInputStepper": Object {
          "baseStyle": [Function],
        },
        "PinInput": Object {
          "defaultProps": Object {
            "manageFocus": true,
            "placeholder": "○",
            "size": "md",
            "space": 1,
          },
          "sizes": Object {
            "2xl": Object {
              "borderRadius": "lg",
              "fontSize": "2xl",
              "height": "56px",
              "p": 3,
              "textAlign": "center",
              "width": "56px",
            },
            "lg": Object {
              "borderRadius": "md",
              "fontSize": "lg",
              "height": "48px",
              "p": 2,
              "textAlign": "center",
              "width": "48px",
            },
            "md": Object {
              "borderRadius": "md",
              "fontSize": "md",
              "height": "40px",
              "p": 2,
              "textAlign": "center",
              "width": "40px",
            },
            "sm": Object {
              "borderRadius": "md",
              "fontSize": "sm",
              "height": "30px",
              "p": 1,
              "textAlign": "center",
              "width": "30px",
            },
            "xl": Object {
              "borderRadius": "lg",
              "fontSize": "xl",
              "height": "52px",
              "p": 3,
              "textAlign": "center",
              "width": "52px",
            },
            "xs": Object {
              "borderRadius": "md",
              "fontSize": "xs",
              "height": "24px",
              "p": 1,
              "textAlign": "center",
              "width": "24px",
            },
          },
        },
        "PopoverArrow": Object {
          "baseStyle": [Function],
        },
        "PopoverBody": Object {
          "baseStyle": [Function],
        },
        "PopoverCloseButton": Object {
          "baseStyle": [Function],
        },
        "PopoverContent": Object {
          "baseStyle": [Function],
        },
        "PopoverFooter": Object {
          "baseStyle": [Function],
        },
        "PopoverHeader": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontWeight": 600,
            },
            "p": 3,
          },
        },
        "Progress": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "isIndeterminate": false,
            "max": 100,
            "min": 0,
            "rounded": "full",
            "size": "sm",
            "value": 0,
          },
          "sizes": Object {
            "2xl": Object {
              "height": 6,
            },
            "lg": Object {
              "height": 4,
            },
            "md": Object {
              "height": 3,
            },
            "sm": Object {
              "height": 2,
            },
            "xl": Object {
              "height": 5,
            },
            "xs": Object {
              "height": 1,
            },
          },
        },
        "Radio": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "defaultIsChecked": false,
            "size": "md",
          },
          "sizes": Object {
            "lg": Object {
              "_icon": Object {
                "size": 4,
              },
              "_text": Object {
                "fontSize": "lg",
              },
            },
            "md": Object {
              "_icon": Object {
                "size": 3,
              },
              "_text": Object {
                "fontSize": "md",
              },
            },
            "sm": Object {
              "_icon": Object {
                "size": 2,
              },
              "_text": Object {
                "fontSize": "sm",
              },
            },
          },
        },
        "ScaleFade": Object {
          "defaultProps": Object {
            "duration": 500,
            "initialScale": 0.9,
          },
        },
        "ScrollView": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "SectionList": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Select": Object {
          "baseStyle": Object {
            "_actionSheetContent": Object {},
            "customDropdownIconProps": Object {
              "mr": 2,
              "size": 5,
            },
          },
          "defaultProps": Object {
            "variant": "outline",
          },
        },
        "SelectItem": Object {
          "baseStyle": Object {
            "borderRadius": 0,
            "minH": 0,
            "p": 1,
            "px": 2,
          },
        },
        "SimpleGrid": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Skeleton": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "variant": "text",
          },
        },
        "Slide": Object {
          "defaultProps": Object {
            "duration": 500,
            "placement": "bottom",
          },
        },
        "SlideFade": Object {
          "defaultProps": Object {
            "duration": 500,
            "offsetX": 10,
            "offsetY": 10,
          },
        },
        "Slider": Object {
          "defaultProps": Object {
            "size": "sm",
          },
          "sizes": Object {
            "lg": Object {
              "sliderSize": 6,
              "thumbSize": 6,
            },
            "md": Object {
              "sliderSize": 5,
              "thumbSize": 5,
            },
            "sm": Object {
              "sliderSize": 4,
              "thumbSize": 4,
            },
          },
        },
        "SliderFilledTrack": Object {
          "baseStyle": [Function],
        },
        "SliderThumb": Object {
          "baseStyle": [Function],
        },
        "SliderTrack": Object {
          "baseStyle": [Function],
        },
        "Spinner": Object {
          "baseStyle": Object {
            "color": "primary.400",
          },
          "defaultProps": Object {
            "size": "large",
          },
          "sizes": Object {
            "lg": "large",
            "sm": "small",
          },
        },
        "Stack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
          "sizes": Object {
            "2xl": 8,
            "2xs": 1,
            "gutter": 0,
            "lg": 6,
            "md": 4,
            "sm": 3,
            "xl": 7,
            "xs": 2,
          },
        },
        "Stat": Object {
          "defaultProps": Object {
            "_statGroup": Object {
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "space": 4,
            },
            "_statHelpText": Object {
              "_text": Object {
                "color": "gray.500",
                "fontSize": "xl",
              },
              "alignItems": "center",
              "flexDirection": "row",
            },
            "_statLabel": Object {
              "fontSize": "xl",
            },
            "_statNumber": Object {
              "fontSize": "4xl",
              "fontWeight": "bold",
              "my": 2,
            },
          },
        },
        "StatusBar": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Switch": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
          },
          "sizes": Object {
            "lg": Object {
              "margin": 1,
              "style": Object {
                "transform": Array [
                  Object {
                    "scale": 1.25,
                  },
                ],
              },
            },
            "md": Object {},
            "sm": Object {
              "style": Object {
                "transform": Array [
                  Object {
                    "scale": 0.75,
                  },
                ],
              },
            },
          },
        },
        "Tabs": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
            "variant": "outline",
          },
          "sizes": Object {
            "lg": Object {
              "activeTabStyle": Object {
                "_text": Object {
                  "fontSize": "lg",
                },
                "px": 5,
                "py": 4,
              },
              "inactiveTabStyle": Object {
                "_text": Object {
                  "fontSize": "lg",
                },
                "px": 5,
                "py": 4,
              },
            },
            "md": Object {
              "activeTabStyle": Object {
                "_text": Object {
                  "fontSize": "md",
                },
                "px": 4,
                "py": 3,
              },
              "inactiveTabStyle": Object {
                "_text": Object {
                  "fontSize": "md",
                },
                "px": 4,
                "py": 3,
              },
            },
            "sm": Object {
              "activeTabStyle": Object {
                "_text": Object {
                  "fontSize": "sm",
                },
                "px": 3,
                "py": 2,
              },
              "inactiveTabStyle": Object {
                "_text": Object {
                  "fontSize": "sm",
                },
                "px": 3,
                "py": 2,
              },
            },
          },
          "variants": Object {
            "filled": [Function],
            "filled-outline": [Function],
            "outline": [Function],
          },
        },
        "Tag": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontWeight": "medium",
            },
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
            "variant": "subtle",
          },
          "sizes": Object {
            "lg": Object {
              "_text": Object {
                "fontSize": "md",
              },
              "borderRadius": "md",
              "minH": 8,
              "minW": 8,
              "p": 3,
            },
            "md": Object {
              "_text": Object {
                "fontSize": "sm",
              },
              "borderRadius": "md",
              "minH": 6,
              "minW": 6,
              "p": 2,
            },
            "sm": Object {
              "_text": Object {
                "fontSize": "xs",
              },
              "borderRadius": "sm",
              "minH": 5,
              "minW": 5,
              "p": 1,
            },
          },
          "variants": Object {
            "outline": [Function],
            "solid": [Function],
            "subtle": [Function],
          },
        },
        "Text": Object {
          "baseStyle": [Function],
          "defaultProps": Object {},
        },
        "TextArea": Object {
          "baseStyle": Object {
            "_ios": Object {
              "h": 20,
            },
            "multiline": true,
            "px": 4,
            "py": 2,
            "totalLines": 4,
          },
        },
        "TextField": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "component": "input",
          },
        },
        "Toast": Object {
          "baseStyle": [Function],
          "defaultProps": Object {},
        },
        "Tooltip": Object {
          "baseStyle": [Function],
        },
        "TypeAheadSearchItem": Object {
          "baseStyle": [Function],
        },
        "VStack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "View": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Wrap": Object {},
        "ZStack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
      },
      "config": Object {
        "accessibleColors": false,
        "initialColorMode": "light",
        "useSystemColorMode": false,
      },
      "fontSizes": Object {
        "2xl": 24,
        "3xl": 30,
        "4xl": 36,
        "5xl": 48,
        "6xl": 60,
        "7xl": 72,
        "8xl": 96,
        "9xl": 128,
        "lg": 18,
        "md": 16,
        "sm": 14,
        "xl": 20,
        "xs": 12,
        "xxs": 10,
      },
      "fontWeights": Object {
        "black": 900,
        "bold": 700,
        "extrabold": 800,
        "hairline": 100,
        "light": 300,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
        "thin": 200,
      },
      "fonts": Object {
        "body": undefined,
        "heading": undefined,
        "mono": undefined,
      },
      "letterSpacings": Object {
        "2xl": 0.4,
        "3xl": 0.5,
        "4xl": 1.25,
        "5xl": 1.5,
        "lg": 0.15,
        "md": 0.1,
        "sm": 0,
        "xl": 0.25,
        "xs": -0.5,
        "xxs": -1.5,
      },
      "lineHeights": Object {
        "10": "40px",
        "3": "12px",
        "4": "16px",
        "5": "20px",
        "6": "24px",
        "7": "28px",
        "8": "32px",
        "9": "36px",
        "base": 1.5,
        "none": 1,
        "short": 1.375,
        "shorter": 1.25,
        "tall": 1.625,
        "taller": "2",
      },
      "radii": Object {
        "full": 9999,
        "lg": 6,
        "md": 4,
        "none": 0,
        "pill": 25,
        "sm": 2,
        "xl": 8,
      },
      "shadows": [Function],
      "sizes": Object {
        "0": "0px",
        "0.5": "2px",
        "1": "4px",
        "1.5": "6px",
        "10": "40px",
        "12": "48px",
        "16": "64px",
        "2": "8px",
        "2.5": "10px",
        "20": "80px",
        "24": "96px",
        "2xl": "672px",
        "2xs": "256px",
        "3": "12px",
        "3.5": "14px",
        "32": "128px",
        "3xs": "224px",
        "4": "16px",
        "40": "160px",
        "48": "192px",
        "5": "20px",
        "56": "224px",
        "6": "24px",
        "64": "256px",
        "7": "28px",
        "72": "288px",
        "8": "32px",
        "80": "320px",
        "9": "36px",
        "96": "384px",
        "container": Object {
          "lg": "1024px",
          "md": "768px",
          "sm": "640px",
          "xl": "1280px",
        },
        "lg": "512px",
        "md": "448px",
        "px": "1px",
        "sm": "384px",
        "xl": "576px",
        "xs": "320px",
      },
      "space": Object {
        "0": "0px",
        "0.5": "2px",
        "1": "4px",
        "1.5": "6px",
        "10": "40px",
        "12": "48px",
        "16": "64px",
        "2": "8px",
        "2.5": "10px",
        "20": "80px",
        "24": "96px",
        "3": "12px",
        "3.5": "14px",
        "32": "128px",
        "4": "16px",
        "40": "160px",
        "48": "192px",
        "5": "20px",
        "56": "224px",
        "6": "24px",
        "64": "256px",
        "7": "28px",
        "72": "288px",
        "8": "32px",
        "80": "320px",
        "9": "36px",
        "96": "384px",
        "px": "1px",
      },
    }
  }
>
  <NativeBaseConfigProviderProvider
    config={Object {}}
  >
    <SafeAreaProvider
      initialMetrics={
        Object {
          "frame": Object {
            "height": 0,
            "width": 0,
            "x": 0,
            "y": 0,
          },
          "insets": Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
            "top": 0,
          },
        }
      }
    >
      <HybridProvider
        options={
          Object {
            "accessibleColors": false,
            "initialColorMode": "light",
            "useSystemColorMode": false,
          }
        }
      >
        <PortalProvider>
          <ToastProvider>
            <InitializeToastRef />
            <SSRProvider>
              <TransakIntroView
                onPress={[MockFunction]}
              />
            </SSRProvider>
          </ToastProvider>
        </PortalProvider>
      </HybridProvider>
    </SafeAreaProvider>
  </NativeBaseConfigProviderProvider>
</ContextProvider>
`;

exports[`BuyDockScreenScreen should render TransakProvider Webview 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "overflow": "hidden",
      },
      undefined,
    ]
  }
>
  <RNCWebView
    cacheEnabled={true}
    injectedJavaScriptBeforeContentLoadedForMainFrameOnly={true}
    injectedJavaScriptForMainFrameOnly={true}
    javaScriptEnabled={true}
    key="webViewKey"
    messagingEnabled={false}
    onContentProcessDidTerminate={[Function]}
    onHttpError={[Function]}
    onLoadingError={[Function]}
    onLoadingFinish={[Function]}
    onLoadingProgress={[Function]}
    onLoadingStart={[Function]}
    onMessage={[Function]}
    onShouldStartLoadWithRequest={[Function]}
    source={
      Object {
        "uri": "cryptoCurrencyCode=DOCK&partnerOrderId=fd1b4a14-f4be-4218-9e76-4aec9c00db69&walletAddress=3C7Hq5jQGxeYzL7LnVASn48tEfr6D7yKtNYSuXcgioQoWWsB",
      }
    }
    style={
      Array [
        Object {
          "flex": 1,
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#ffffff",
        },
        undefined,
      ]
    }
    useSharedProcessPool={true}
  />
</View>
`;

exports[`BuyDockScreenScreen should render TransakProvider correctly 1`] = `
<ContextProvider
  value={
    Object {
      "borders": Object {
        "1px": "1px solid",
        "2px": "2px solid",
        "4px": "4px solid",
        "none": 0,
      },
      "breakpoints": Object {
        "base": 0,
        "lg": 992,
        "md": 768,
        "sm": 480,
        "xl": 1280,
      },
      "colors": Object {
        "amber": Object {
          "100": "#fef3c7",
          "200": "#fde68a",
          "300": "#fcd34d",
          "400": "#fbbf24",
          "50": "#fffbeb",
          "500": "#f59e0b",
          "600": "#d97706",
          "700": "#b45309",
          "800": "#92400e",
          "900": "#78350f",
        },
        "black": "#000000",
        "blue": Object {
          "100": "#dbeafe",
          "200": "#bfdbfe",
          "300": "#93c5fd",
          "400": "#60a5fa",
          "50": "#eff6ff",
          "500": "#3b82f6",
          "600": "#2563eb",
          "700": "#1d4ed8",
          "800": "#1e40af",
          "900": "#1e3a8a",
        },
        "blueGray": Object {
          "100": "#f1f5f9",
          "200": "#e2e8f0",
          "300": "#cbd5e1",
          "400": "#94a3b8",
          "50": "#f8fafc",
          "500": "#64748b",
          "600": "#475569",
          "700": "#334155",
          "800": "#1e293b",
          "900": "#0f172a",
        },
        "contrastThreshold": 7,
        "coolGray": Object {
          "100": "#f3f4f6",
          "200": "#e5e7eb",
          "300": "#d1d5db",
          "400": "#9ca3af",
          "50": "#f9fafb",
          "500": "#6b7280",
          "600": "#4b5563",
          "700": "#374151",
          "800": "#1f2937",
          "900": "#111827",
        },
        "cyan": Object {
          "100": "#cffafe",
          "200": "#a5f3fc",
          "300": "#67e8f9",
          "400": "#22d3ee",
          "50": "#ecfeff",
          "500": "#06b6d4",
          "600": "#0891b2",
          "700": "#0e7490",
          "800": "#155e75",
          "900": "#164e63",
        },
        "danger": Object {
          "100": "#ffe4e6",
          "200": "#fecdd3",
          "300": "#fda4af",
          "400": "#fb7185",
          "50": "#fff1f2",
          "500": "#f43f5e",
          "600": "#e11d48",
          "700": "#be123c",
          "800": "#9f1239",
          "900": "#881337",
        },
        "dark": Object {
          "100": "#27272a",
          "200": "#3f3f46",
          "300": "#52525b",
          "400": "#71717a",
          "50": "#18181b",
          "500": "#a1a1aa",
          "600": "#d4d4d8",
          "700": "#e4e4e7",
          "800": "#f4f4f5",
          "900": "#fafafa",
        },
        "darkBlue": Object {
          "100": "#addbff",
          "200": "#7cc2ff",
          "300": "#4aa9ff",
          "400": "#1a91ff",
          "50": "#dbf4ff",
          "500": "#0077e6",
          "600": "#005db4",
          "700": "#004282",
          "800": "#002851",
          "900": "#000e21",
        },
        "darkText": "#000000",
        "emerald": Object {
          "100": "#d1fae5",
          "200": "#a7f3d0",
          "300": "#6ee7b7",
          "400": "#34d399",
          "50": "#ecfdf5",
          "500": "#10b981",
          "600": "#059669",
          "700": "#047857",
          "800": "#065f46",
          "900": "#064e3b",
        },
        "error": Object {
          "100": "#fee2e2",
          "200": "#fecaca",
          "300": "#fca5a5",
          "400": "#f87171",
          "50": "#fef2f2",
          "500": "#ef4444",
          "600": "#dc2626",
          "700": "#b91c1c",
          "800": "#991b1b",
          "900": "#7f1d1d",
        },
        "fuchsia": Object {
          "100": "#fae8ff",
          "200": "#f5d0fe",
          "300": "#f0abfc",
          "400": "#e879f9",
          "50": "#fdf4ff",
          "500": "#d946ef",
          "600": "#c026d3",
          "700": "#a21caf",
          "800": "#86198f",
          "900": "#701a75",
        },
        "gray": Object {
          "100": "#f4f4f5",
          "200": "#e4e4e7",
          "300": "#d4d4d8",
          "400": "#a1a1aa",
          "50": "#fafafa",
          "500": "#71717a",
          "600": "#52525b",
          "700": "#3f3f46",
          "800": "#27272a",
          "900": "#18181b",
        },
        "green": Object {
          "100": "#dcfce7",
          "200": "#bbf7d0",
          "300": "#86efac",
          "400": "#4ade80",
          "50": "#f0fdf4",
          "500": "#22c55e",
          "600": "#16a34a",
          "700": "#15803d",
          "800": "#166534",
          "900": "#14532d",
        },
        "indigo": Object {
          "100": "#e0e7ff",
          "200": "#c7d2fe",
          "300": "#a5b4fc",
          "400": "#818cf8",
          "50": "#eef2ff",
          "500": "#6366f1",
          "600": "#4f46e5",
          "700": "#4338ca",
          "800": "#3730a3",
          "900": "#312e81",
        },
        "info": Object {
          "100": "#e0f2fe",
          "200": "#bae6fd",
          "300": "#7dd3fc",
          "400": "#38bdf8",
          "50": "#f0f9ff",
          "500": "#0ea5e9",
          "600": "#0284c7",
          "700": "#0369a1",
          "800": "#075985",
          "900": "#0c4a6e",
        },
        "light": Object {
          "100": "#f5f5f4",
          "200": "#e7e5e4",
          "300": "#d6d3d1",
          "400": "#a8a29e",
          "50": "#fafaf9",
          "500": "#78716c",
          "600": "#57534e",
          "700": "#44403c",
          "800": "#292524",
          "900": "#1c1917",
        },
        "lightBlue": Object {
          "100": "#e0f2fe",
          "200": "#bae6fd",
          "300": "#7dd3fc",
          "400": "#38bdf8",
          "50": "#f0f9ff",
          "500": "#0ea5e9",
          "600": "#0284c7",
          "700": "#0369a1",
          "800": "#075985",
          "900": "#0c4a6e",
        },
        "lightText": "#FFFFFF",
        "lime": Object {
          "100": "#ecfccb",
          "200": "#d9f99d",
          "300": "#bef264",
          "400": "#a3e635",
          "50": "#f7fee7",
          "500": "#84cc16",
          "600": "#65a30d",
          "700": "#4d7c0f",
          "800": "#3f6212",
          "900": "#365314",
        },
        "muted": Object {
          "100": "#f5f5f5",
          "200": "#e5e5e5",
          "300": "#d4d4d4",
          "400": "#a3a3a3",
          "50": "#fafafa",
          "500": "#737373",
          "600": "#525252",
          "700": "#404040",
          "800": "#262626",
          "900": "#171717",
        },
        "orange": Object {
          "100": "#ffedd5",
          "200": "#fed7aa",
          "300": "#fdba74",
          "400": "#fb923c",
          "50": "#fff7ed",
          "500": "#f97316",
          "600": "#ea580c",
          "700": "#c2410c",
          "800": "#9a3412",
          "900": "#7c2d12",
        },
        "pink": Object {
          "100": "#fce7f3",
          "200": "#fbcfe8",
          "300": "#f9a8d4",
          "400": "#f472b6",
          "50": "#fdf2f8",
          "500": "#ec4899",
          "600": "#db2777",
          "700": "#be185d",
          "800": "#9d174d",
          "900": "#831843",
        },
        "primary": Object {
          "100": "#cffafe",
          "200": "#a5f3fc",
          "300": "#67e8f9",
          "400": "#22d3ee",
          "50": "#ecfeff",
          "500": "#06b6d4",
          "600": "#0891b2",
          "700": "#0e7490",
          "800": "#155e75",
          "900": "#164e63",
        },
        "purple": Object {
          "100": "#f3e8ff",
          "200": "#e9d5ff",
          "300": "#d8b4fe",
          "400": "#c084fc",
          "50": "#faf5ff",
          "500": "#a855f7",
          "600": "#9333ea",
          "700": "#7e22ce",
          "800": "#6b21a8",
          "900": "#581c87",
        },
        "red": Object {
          "100": "#fee2e2",
          "200": "#fecaca",
          "300": "#fca5a5",
          "400": "#f87171",
          "50": "#fef2f2",
          "500": "#ef4444",
          "600": "#dc2626",
          "700": "#b91c1c",
          "800": "#991b1b",
          "900": "#7f1d1d",
        },
        "rose": Object {
          "100": "#ffe4e6",
          "200": "#fecdd3",
          "300": "#fda4af",
          "400": "#fb7185",
          "50": "#fff1f2",
          "500": "#f43f5e",
          "600": "#e11d48",
          "700": "#be123c",
          "800": "#9f1239",
          "900": "#881337",
        },
        "secondary": Object {
          "100": "#fce7f3",
          "200": "#fbcfe8",
          "300": "#f9a8d4",
          "400": "#f472b6",
          "50": "#fdf2f8",
          "500": "#ec4899",
          "600": "#db2777",
          "700": "#be185d",
          "800": "#9d174d",
          "900": "#831843",
        },
        "success": Object {
          "100": "#dcfce7",
          "200": "#bbf7d0",
          "300": "#86efac",
          "400": "#4ade80",
          "50": "#f0fdf4",
          "500": "#22c55e",
          "600": "#16a34a",
          "700": "#15803d",
          "800": "#166534",
          "900": "#14532d",
        },
        "teal": Object {
          "100": "#ccfbf1",
          "200": "#99f6e4",
          "300": "#5eead4",
          "400": "#2dd4bf",
          "50": "#f0fdfa",
          "500": "#14b8a6",
          "600": "#0d9488",
          "700": "#0f766e",
          "800": "#115e59",
          "900": "#134e4a",
        },
        "tertiary": Object {
          "100": "#d1fae5",
          "200": "#a7f3d0",
          "300": "#6ee7b7",
          "400": "#34d399",
          "50": "#ecfdf5",
          "500": "#10b981",
          "600": "#059669",
          "700": "#047857",
          "800": "#065f46",
          "900": "#064e3b",
        },
        "trueGray": Object {
          "100": "#f5f5f5",
          "200": "#e5e5e5",
          "300": "#d4d4d4",
          "400": "#a3a3a3",
          "50": "#fafafa",
          "500": "#737373",
          "600": "#525252",
          "700": "#404040",
          "800": "#262626",
          "900": "#171717",
        },
        "violet": Object {
          "100": "#ede9fe",
          "200": "#ddd6fe",
          "300": "#c4b5fd",
          "400": "#a78bfa",
          "50": "#f5f3ff",
          "500": "#8b5cf6",
          "600": "#7c3aed",
          "700": "#6d28d9",
          "800": "#5b21b6",
          "900": "#4c1d95",
        },
        "warmGray": Object {
          "100": "#f5f5f4",
          "200": "#e7e5e4",
          "300": "#d6d3d1",
          "400": "#a8a29e",
          "50": "#fafaf9",
          "500": "#78716c",
          "600": "#57534e",
          "700": "#44403c",
          "800": "#292524",
          "900": "#1c1917",
        },
        "warning": Object {
          "100": "#ffedd5",
          "200": "#fed7aa",
          "300": "#fdba74",
          "400": "#fb923c",
          "50": "#fff7ed",
          "500": "#f97316",
          "600": "#ea580c",
          "700": "#c2410c",
          "800": "#9a3412",
          "900": "#7c2d12",
        },
        "white": "#FFFFFF",
        "yellow": Object {
          "100": "#fef9c3",
          "200": "#fef08a",
          "300": "#fde047",
          "400": "#facc15",
          "50": "#fefce8",
          "500": "#eab308",
          "600": "#ca8a04",
          "700": "#a16207",
          "800": "#854d0e",
          "900": "#713f12",
        },
      },
      "components": Object {
        "Accordion": Object {
          "baseStyle": [Function],
        },
        "AccordionDetails": Object {
          "baseStyle": Object {
            "p": 3,
          },
        },
        "AccordionIcon": Object {},
        "AccordionItem": Object {},
        "AccordionSummary": Object {
          "baseStyle": [Function],
        },
        "Actionsheet": Object {
          "defaultProps": Object {
            "size": "full",
          },
        },
        "ActionsheetContent": Object {
          "baseStyle": Object {
            "_dragIndicator": Object {
              "bg": "coolGray.400",
              "borderRadius": 2,
              "height": 1,
              "width": 9,
            },
            "alignItems": "center",
            "borderRadius": "none",
            "p": 2,
            "roundedTop": 10,
          },
        },
        "ActionsheetItem": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "variant": "unstyled",
          },
        },
        "Alert": Object {
          "baseStyle": Object {
            "_actionProps": Object {
              "alignSelf": "center",
              "ml": "auto",
            },
            "_text": Object {
              "color": "gray.700",
              "fontSize": "sm",
              "lineHeight": 5,
            },
            "alignItems": "center",
            "borderRadius": "md",
            "justifyContent": "flex-start",
            "p": 3,
            "space": 3,
          },
          "defaultProps": Object {
            "colorScheme": "primary",
            "variant": "subtle",
          },
          "variants": Object {
            "left-accent": [Function],
            "outline": [Function],
            "outline-light": [Function],
            "solid": [Function],
            "subtle": [Function],
            "top-accent": [Function],
          },
        },
        "AlertDescription": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "sm",
            },
            "flexShrink": 1,
          },
        },
        "AlertIcon": Object {
          "baseStyle": Object {
            "size": 6,
          },
        },
        "AlertTitle": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "md",
              "fontWeight": "bold",
              "lineHeight": 5,
            },
          },
        },
        "AppBar": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
          },
        },
        "Avatar": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "size": "md",
          },
          "sizes": Object {
            "2xl": Object {
              "fontSize": "3xl",
              "height": "32",
              "width": "32",
            },
            "2xs": Object {
              "fontSize": "xs",
              "height": "4",
              "width": "4",
            },
            "full": Object {
              "fontSize": "4xl",
              "height": "100%",
              "width": "100%",
            },
            "lg": Object {
              "fontSize": "xl",
              "height": "16",
              "width": "16",
            },
            "md": Object {
              "fontSize": "lg",
              "height": "12",
              "width": "12",
            },
            "sm": Object {
              "fontSize": "md",
              "height": "8",
              "width": "8",
            },
            "xl": Object {
              "fontSize": "2xl",
              "height": "24",
              "width": "24",
            },
            "xs": Object {
              "fontSize": "sm",
              "height": "6",
              "width": "6",
            },
          },
        },
        "AvatarBadge": Object {
          "baseStyle": [Function],
        },
        "AvatarGroup": Object {
          "baseStyle": [Function],
        },
        "Badge": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "xs",
              "fontWeight": "bold",
            },
            "px": 1,
          },
          "defaultProps": Object {
            "colorScheme": "muted",
            "variant": "subtle",
          },
          "variants": Object {
            "outline": [Function],
            "solid": [Function],
            "subtle": [Function],
          },
        },
        "Box": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Breadcrumb": Object {
          "baseStyle": Object {
            "display": "flex",
            "flexDirection": "row",
            "height": "auto",
            "width": "auto",
          },
          "defaultProps": Object {
            "direction": "row",
            "wrap": "wrap",
          },
        },
        "Button": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
            "variant": "solid",
          },
          "sizes": Object {
            "lg": Object {
              "_text": Object {
                "fontSize": "lg",
              },
              "px": 6,
              "py": 3,
            },
            "md": Object {
              "_text": Object {
                "fontSize": "md",
              },
              "px": 4,
              "py": 3,
            },
            "sm": Object {
              "_text": Object {
                "fontSize": "sm",
              },
              "px": 4,
              "py": 2,
            },
            "xs": Object {
              "_text": Object {
                "fontSize": "xs",
              },
              "px": 2,
              "py": 1,
            },
          },
          "variants": Object {
            "ghost": [Function],
            "link": [Function],
            "outline": [Function],
            "solid": [Function],
            "unstyled": [Function],
          },
        },
        "ButtonGroup": Object {
          "baseStyle": Object {
            "direction": "row",
          },
          "defaultProps": Object {
            "space": 2,
          },
        },
        "Center": Object {
          "sizes": Object {
            "2xl": Object {
              "height": 40,
              "width": 40,
            },
            "lg": Object {
              "height": 24,
              "width": 24,
            },
            "md": Object {
              "height": 16,
              "width": 16,
            },
            "sm": Object {
              "height": 12,
              "width": 12,
            },
            "xl": Object {
              "height": 32,
              "width": 32,
            },
            "xs": Object {
              "height": 10,
              "width": 10,
            },
          },
        },
        "Checkbox": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "defaultIsChecked": false,
            "size": "sm",
          },
          "sizes": Object {
            "lg": Object {
              "_icon": Object {
                "size": 6,
              },
              "_text": Object {
                "fontSize": "xl",
              },
            },
            "md": Object {
              "_icon": Object {
                "size": 5,
              },
              "_text": Object {
                "fontSize": "lg",
              },
            },
            "sm": Object {
              "_icon": Object {
                "size": 4,
              },
              "_text": Object {
                "fontSize": "md",
              },
            },
          },
        },
        "CircularProgress": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "lg",
            "thickness": 8,
          },
          "sizes": Object {
            "2xl": Object {
              "height": 32,
              "width": 32,
            },
            "lg": Object {
              "height": 20,
              "width": 20,
            },
            "md": Object {
              "height": 16,
              "width": 16,
            },
            "sm": Object {
              "height": 8,
              "width": 8,
            },
            "xl": Object {
              "height": 24,
              "width": 24,
            },
            "xs": Object {
              "height": 6,
              "width": 6,
            },
          },
        },
        "Code": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontFamily": "Courier",
              "fontSize": "sm",
            },
            "borderRadius": "sm",
            "px": 2,
            "py": 1,
          },
          "defaultProps": Object {
            "colorScheme": "muted",
            "variant": "subtle",
          },
          "variants": Object {
            "outline": [Function],
            "solid": [Function],
            "subtle": [Function],
          },
        },
        "Container": Object {
          "baseStyle": Object {
            "maxWidth": "80%",
          },
        },
        "Divider": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "orientation": "horizontal",
            "size": 1,
          },
        },
        "FAB": Object {
          "baseStyle": Object {
            "shadow": 7,
          },
          "defaultProps": Object {
            "colorScheme": "primary",
            "p": 4,
            "placement": "bottom-right",
            "placementProps": Object {
              "bottom-left": Object {
                "bottom": 4,
                "left": 4,
                "position": "absolute",
              },
              "bottom-right": Object {
                "bottom": 4,
                "position": "absolute",
                "right": 4,
              },
              "top-left": Object {
                "left": 4,
                "position": "absolute",
                "top": 12,
              },
              "top-right": Object {
                "position": "absolute",
                "right": 4,
                "top": 12,
              },
            },
            "rounded": "full",
            "variant": "solid",
            "zIndex": 20,
          },
        },
        "Fade": Object {
          "defaultProps": Object {
            "entryDuration": 500,
            "exitDuration": 500,
          },
        },
        "FlatList": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Flex": Object {
          "defaultProps": Object {
            "flexDirection": "column",
          },
        },
        "FormControl": Object {},
        "FormControlErrorMessage": Object {
          "baseStyle": Object {
            "_text": Object {
              "color": "error.400",
              "fontSize": "xs",
            },
            "mt": 2,
          },
        },
        "FormControlHelperText": Object {
          "baseStyle": [Function],
        },
        "FormControlLabel": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "md",
            },
            "astrickColor": "error.400",
            "mb": 2,
            "mr": 3,
          },
        },
        "HStack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Heading": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "size": "xl",
          },
          "sizes": Object {
            "2xl": Object {
              "fontSize": Array [
                "4xl",
                null,
                "5xl",
              ],
            },
            "3xl": Object {
              "fontSize": Array [
                "5xl",
                null,
                "6xl",
              ],
            },
            "4xl": Object {
              "fontSize": Array [
                "6xl",
                null,
                "7xl",
              ],
            },
            "lg": Object {
              "fontSize": Array [
                "2xl",
                null,
                "3xl",
              ],
            },
            "md": Object {
              "fontSize": "xl",
            },
            "sm": Object {
              "fontSize": "md",
            },
            "xl": Object {
              "fontSize": Array [
                "3xl",
                null,
                "4xl",
              ],
            },
            "xs": Object {
              "fontSize": "sm",
            },
          },
        },
        "Icon": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "color": "primary",
            "size": "md",
          },
          "sizes": Object {
            "2xl": 16,
            "3xl": 20,
            "4xl": 24,
            "5xl": 32,
            "6xl": 64,
            "lg": 10,
            "md": 8,
            "sm": 6,
            "xl": 12,
            "xs": 4,
            "xxs": 2,
          },
        },
        "IconButton": Object {
          "baseStyle": Object {
            "borderRadius": "md",
          },
          "defaultProps": Object {
            "size": "md",
            "variant": "ghost",
          },
          "sizes": Object {
            "lg": Object {
              "p": 3,
            },
            "md": Object {
              "p": 2,
            },
            "sm": Object {
              "p": 1,
            },
          },
        },
        "Image": Object {
          "baseStyle": Object {
            "maxWidth": "100%",
          },
          "defaultProps": Object {},
          "sizes": Object {
            "2xl": Object {
              "size": 64,
            },
            "2xs": Object {
              "size": 6,
            },
            "full": Object {
              "size": "100%",
            },
            "lg": Object {
              "size": 24,
            },
            "md": Object {
              "size": 20,
            },
            "sm": Object {
              "size": 16,
            },
            "xl": Object {
              "size": 32,
            },
            "xs": Object {
              "size": 10,
            },
          },
        },
        "Input": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "size": "md",
            "variant": "outline",
          },
          "sizes": Object {
            "2xl": Object {
              "fontSize": "2xl",
            },
            "lg": Object {
              "fontSize": "lg",
            },
            "md": Object {
              "fontSize": "md",
            },
            "sm": Object {
              "fontSize": "sm",
            },
            "xl": Object {
              "fontSize": "xl",
            },
            "xs": Object {
              "fontSize": "xs",
            },
          },
          "variants": Object {
            "filled": [Function],
            "outline": [Function],
            "rounded": [Function],
            "underlined": [Function],
            "unstyled": [Function],
          },
        },
        "Kbd": Object {
          "baseStyle": [Function],
          "defaultProps": Object {},
        },
        "KeyboardAvoidingView": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Link": Object {
          "baseStyle": Object {
            "height": "auto",
            "width": "auto",
          },
        },
        "List": Object {
          "baseStyle": [Function],
        },
        "ListIcon": Object {
          "baseStyle": Object {
            "mr": 8,
            "size": "md",
          },
        },
        "ListItem": Object {
          "baseStyle": Object {
            "borderColor": "gray.300",
            "py": 2,
          },
          "defaultProps": Object {
            "start": 1,
          },
        },
        "Menu": Object {
          "baseStyle": [Function],
        },
        "MenuGroup": Object {
          "baseStyle": [Function],
        },
        "MenuItem": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "_disabled": Object {
              "opacity": 0.5,
            },
          },
        },
        "Modal": Object {
          "baseStyle": Object {
            "alignItems": "center",
            "height": "100%",
            "justifyContent": "center",
            "width": "100%",
          },
          "defaultProps": Object {
            "closeOnOverlayClick": true,
            "size": "lg",
          },
          "sizes": Object {
            "full": Object {
              "contentSize": Object {
                "width": "100%",
              },
            },
            "lg": Object {
              "contentSize": Object {
                "width": "90%",
              },
            },
            "md": Object {
              "contentSize": Object {
                "width": "75%",
              },
            },
            "sm": Object {
              "contentSize": Object {
                "width": "60%",
              },
            },
          },
        },
        "ModalBody": Object {
          "baseStyle": [Function],
        },
        "ModalCloseButton": Object {
          "baseStyle": [Function],
        },
        "ModalContent": Object {
          "baseStyle": [Function],
        },
        "ModalFooter": Object {
          "baseStyle": Object {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "pr": 2,
            "py": 2,
          },
        },
        "ModalHeader": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontSize": "xl",
              "fontWeight": "bold",
            },
            "pb": 3,
            "pr": 6,
          },
        },
        "ModalOverlay": Object {
          "baseStyle": Object {
            "bottom": 0,
            "left": 0,
            "opacity": 0.5,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "NumberInput": Object {
          "defaultProps": Object {
            "clampValueOnBlur": true,
            "defaultValue": "0",
            "focusInputOnChange": true,
            "getAriaValueText": true,
            "keepWithinRange": true,
            "max": Infinity,
            "min": -Infinity,
            "size": "sm",
            "step": 1,
          },
        },
        "NumberInputStepper": Object {
          "baseStyle": [Function],
        },
        "PinInput": Object {
          "defaultProps": Object {
            "manageFocus": true,
            "placeholder": "○",
            "size": "md",
            "space": 1,
          },
          "sizes": Object {
            "2xl": Object {
              "borderRadius": "lg",
              "fontSize": "2xl",
              "height": "56px",
              "p": 3,
              "textAlign": "center",
              "width": "56px",
            },
            "lg": Object {
              "borderRadius": "md",
              "fontSize": "lg",
              "height": "48px",
              "p": 2,
              "textAlign": "center",
              "width": "48px",
            },
            "md": Object {
              "borderRadius": "md",
              "fontSize": "md",
              "height": "40px",
              "p": 2,
              "textAlign": "center",
              "width": "40px",
            },
            "sm": Object {
              "borderRadius": "md",
              "fontSize": "sm",
              "height": "30px",
              "p": 1,
              "textAlign": "center",
              "width": "30px",
            },
            "xl": Object {
              "borderRadius": "lg",
              "fontSize": "xl",
              "height": "52px",
              "p": 3,
              "textAlign": "center",
              "width": "52px",
            },
            "xs": Object {
              "borderRadius": "md",
              "fontSize": "xs",
              "height": "24px",
              "p": 1,
              "textAlign": "center",
              "width": "24px",
            },
          },
        },
        "PopoverArrow": Object {
          "baseStyle": [Function],
        },
        "PopoverBody": Object {
          "baseStyle": [Function],
        },
        "PopoverCloseButton": Object {
          "baseStyle": [Function],
        },
        "PopoverContent": Object {
          "baseStyle": [Function],
        },
        "PopoverFooter": Object {
          "baseStyle": [Function],
        },
        "PopoverHeader": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontWeight": 600,
            },
            "p": 3,
          },
        },
        "Progress": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "isIndeterminate": false,
            "max": 100,
            "min": 0,
            "rounded": "full",
            "size": "sm",
            "value": 0,
          },
          "sizes": Object {
            "2xl": Object {
              "height": 6,
            },
            "lg": Object {
              "height": 4,
            },
            "md": Object {
              "height": 3,
            },
            "sm": Object {
              "height": 2,
            },
            "xl": Object {
              "height": 5,
            },
            "xs": Object {
              "height": 1,
            },
          },
        },
        "Radio": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "defaultIsChecked": false,
            "size": "md",
          },
          "sizes": Object {
            "lg": Object {
              "_icon": Object {
                "size": 4,
              },
              "_text": Object {
                "fontSize": "lg",
              },
            },
            "md": Object {
              "_icon": Object {
                "size": 3,
              },
              "_text": Object {
                "fontSize": "md",
              },
            },
            "sm": Object {
              "_icon": Object {
                "size": 2,
              },
              "_text": Object {
                "fontSize": "sm",
              },
            },
          },
        },
        "ScaleFade": Object {
          "defaultProps": Object {
            "duration": 500,
            "initialScale": 0.9,
          },
        },
        "ScrollView": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "SectionList": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Select": Object {
          "baseStyle": Object {
            "_actionSheetContent": Object {},
            "customDropdownIconProps": Object {
              "mr": 2,
              "size": 5,
            },
          },
          "defaultProps": Object {
            "variant": "outline",
          },
        },
        "SelectItem": Object {
          "baseStyle": Object {
            "borderRadius": 0,
            "minH": 0,
            "p": 1,
            "px": 2,
          },
        },
        "SimpleGrid": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Skeleton": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "variant": "text",
          },
        },
        "Slide": Object {
          "defaultProps": Object {
            "duration": 500,
            "placement": "bottom",
          },
        },
        "SlideFade": Object {
          "defaultProps": Object {
            "duration": 500,
            "offsetX": 10,
            "offsetY": 10,
          },
        },
        "Slider": Object {
          "defaultProps": Object {
            "size": "sm",
          },
          "sizes": Object {
            "lg": Object {
              "sliderSize": 6,
              "thumbSize": 6,
            },
            "md": Object {
              "sliderSize": 5,
              "thumbSize": 5,
            },
            "sm": Object {
              "sliderSize": 4,
              "thumbSize": 4,
            },
          },
        },
        "SliderFilledTrack": Object {
          "baseStyle": [Function],
        },
        "SliderThumb": Object {
          "baseStyle": [Function],
        },
        "SliderTrack": Object {
          "baseStyle": [Function],
        },
        "Spinner": Object {
          "baseStyle": Object {
            "color": "primary.400",
          },
          "defaultProps": Object {
            "size": "large",
          },
          "sizes": Object {
            "lg": "large",
            "sm": "small",
          },
        },
        "Stack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
          "sizes": Object {
            "2xl": 8,
            "2xs": 1,
            "gutter": 0,
            "lg": 6,
            "md": 4,
            "sm": 3,
            "xl": 7,
            "xs": 2,
          },
        },
        "Stat": Object {
          "defaultProps": Object {
            "_statGroup": Object {
              "flexWrap": "wrap",
              "justifyContent": "space-between",
              "space": 4,
            },
            "_statHelpText": Object {
              "_text": Object {
                "color": "gray.500",
                "fontSize": "xl",
              },
              "alignItems": "center",
              "flexDirection": "row",
            },
            "_statLabel": Object {
              "fontSize": "xl",
            },
            "_statNumber": Object {
              "fontSize": "4xl",
              "fontWeight": "bold",
              "my": 2,
            },
          },
        },
        "StatusBar": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Switch": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
          },
          "sizes": Object {
            "lg": Object {
              "margin": 1,
              "style": Object {
                "transform": Array [
                  Object {
                    "scale": 1.25,
                  },
                ],
              },
            },
            "md": Object {},
            "sm": Object {
              "style": Object {
                "transform": Array [
                  Object {
                    "scale": 0.75,
                  },
                ],
              },
            },
          },
        },
        "Tabs": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
            "variant": "outline",
          },
          "sizes": Object {
            "lg": Object {
              "activeTabStyle": Object {
                "_text": Object {
                  "fontSize": "lg",
                },
                "px": 5,
                "py": 4,
              },
              "inactiveTabStyle": Object {
                "_text": Object {
                  "fontSize": "lg",
                },
                "px": 5,
                "py": 4,
              },
            },
            "md": Object {
              "activeTabStyle": Object {
                "_text": Object {
                  "fontSize": "md",
                },
                "px": 4,
                "py": 3,
              },
              "inactiveTabStyle": Object {
                "_text": Object {
                  "fontSize": "md",
                },
                "px": 4,
                "py": 3,
              },
            },
            "sm": Object {
              "activeTabStyle": Object {
                "_text": Object {
                  "fontSize": "sm",
                },
                "px": 3,
                "py": 2,
              },
              "inactiveTabStyle": Object {
                "_text": Object {
                  "fontSize": "sm",
                },
                "px": 3,
                "py": 2,
              },
            },
          },
          "variants": Object {
            "filled": [Function],
            "filled-outline": [Function],
            "outline": [Function],
          },
        },
        "Tag": Object {
          "baseStyle": Object {
            "_text": Object {
              "fontWeight": "medium",
            },
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "center",
          },
          "defaultProps": Object {
            "colorScheme": "primary",
            "size": "md",
            "variant": "subtle",
          },
          "sizes": Object {
            "lg": Object {
              "_text": Object {
                "fontSize": "md",
              },
              "borderRadius": "md",
              "minH": 8,
              "minW": 8,
              "p": 3,
            },
            "md": Object {
              "_text": Object {
                "fontSize": "sm",
              },
              "borderRadius": "md",
              "minH": 6,
              "minW": 6,
              "p": 2,
            },
            "sm": Object {
              "_text": Object {
                "fontSize": "xs",
              },
              "borderRadius": "sm",
              "minH": 5,
              "minW": 5,
              "p": 1,
            },
          },
          "variants": Object {
            "outline": [Function],
            "solid": [Function],
            "subtle": [Function],
          },
        },
        "Text": Object {
          "baseStyle": [Function],
          "defaultProps": Object {},
        },
        "TextArea": Object {
          "baseStyle": Object {
            "_ios": Object {
              "h": 20,
            },
            "multiline": true,
            "px": 4,
            "py": 2,
            "totalLines": 4,
          },
        },
        "TextField": Object {
          "baseStyle": [Function],
          "defaultProps": Object {
            "component": "input",
          },
        },
        "Toast": Object {
          "baseStyle": [Function],
          "defaultProps": Object {},
        },
        "Tooltip": Object {
          "baseStyle": [Function],
        },
        "TypeAheadSearchItem": Object {
          "baseStyle": [Function],
        },
        "VStack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "View": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
        "Wrap": Object {},
        "ZStack": Object {
          "baseStyle": Object {},
          "defaultProps": Object {},
        },
      },
      "config": Object {
        "accessibleColors": false,
        "initialColorMode": "light",
        "useSystemColorMode": false,
      },
      "fontSizes": Object {
        "2xl": 24,
        "3xl": 30,
        "4xl": 36,
        "5xl": 48,
        "6xl": 60,
        "7xl": 72,
        "8xl": 96,
        "9xl": 128,
        "lg": 18,
        "md": 16,
        "sm": 14,
        "xl": 20,
        "xs": 12,
        "xxs": 10,
      },
      "fontWeights": Object {
        "black": 900,
        "bold": 700,
        "extrabold": 800,
        "hairline": 100,
        "light": 300,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
        "thin": 200,
      },
      "fonts": Object {
        "body": undefined,
        "heading": undefined,
        "mono": undefined,
      },
      "letterSpacings": Object {
        "2xl": 0.4,
        "3xl": 0.5,
        "4xl": 1.25,
        "5xl": 1.5,
        "lg": 0.15,
        "md": 0.1,
        "sm": 0,
        "xl": 0.25,
        "xs": -0.5,
        "xxs": -1.5,
      },
      "lineHeights": Object {
        "10": "40px",
        "3": "12px",
        "4": "16px",
        "5": "20px",
        "6": "24px",
        "7": "28px",
        "8": "32px",
        "9": "36px",
        "base": 1.5,
        "none": 1,
        "short": 1.375,
        "shorter": 1.25,
        "tall": 1.625,
        "taller": "2",
      },
      "radii": Object {
        "full": 9999,
        "lg": 6,
        "md": 4,
        "none": 0,
        "pill": 25,
        "sm": 2,
        "xl": 8,
      },
      "shadows": [Function],
      "sizes": Object {
        "0": "0px",
        "0.5": "2px",
        "1": "4px",
        "1.5": "6px",
        "10": "40px",
        "12": "48px",
        "16": "64px",
        "2": "8px",
        "2.5": "10px",
        "20": "80px",
        "24": "96px",
        "2xl": "672px",
        "2xs": "256px",
        "3": "12px",
        "3.5": "14px",
        "32": "128px",
        "3xs": "224px",
        "4": "16px",
        "40": "160px",
        "48": "192px",
        "5": "20px",
        "56": "224px",
        "6": "24px",
        "64": "256px",
        "7": "28px",
        "72": "288px",
        "8": "32px",
        "80": "320px",
        "9": "36px",
        "96": "384px",
        "container": Object {
          "lg": "1024px",
          "md": "768px",
          "sm": "640px",
          "xl": "1280px",
        },
        "lg": "512px",
        "md": "448px",
        "px": "1px",
        "sm": "384px",
        "xl": "576px",
        "xs": "320px",
      },
      "space": Object {
        "0": "0px",
        "0.5": "2px",
        "1": "4px",
        "1.5": "6px",
        "10": "40px",
        "12": "48px",
        "16": "64px",
        "2": "8px",
        "2.5": "10px",
        "20": "80px",
        "24": "96px",
        "3": "12px",
        "3.5": "14px",
        "32": "128px",
        "4": "16px",
        "40": "160px",
        "48": "192px",
        "5": "20px",
        "56": "224px",
        "6": "24px",
        "64": "256px",
        "7": "28px",
        "72": "288px",
        "8": "32px",
        "80": "320px",
        "9": "36px",
        "96": "384px",
        "px": "1px",
      },
    }
  }
>
  <NativeBaseConfigProviderProvider
    config={Object {}}
  >
    <SafeAreaProvider
      initialMetrics={
        Object {
          "frame": Object {
            "height": 0,
            "width": 0,
            "x": 0,
            "y": 0,
          },
          "insets": Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
            "top": 0,
          },
        }
      }
    >
      <HybridProvider
        options={
          Object {
            "accessibleColors": false,
            "initialColorMode": "light",
            "useSystemColorMode": false,
          }
        }
      >
        <PortalProvider>
          <ToastProvider>
            <InitializeToastRef />
            <SSRProvider>
              <TransakPaymentProvider
                partnerOrderId="fd1b4a14-f4be-4218-9e76-4aec9c00db69"
                walletAddress="3C7Hq5jQGxeYzL7LnVASn48tEfr6D7yKtNYSuXcgioQoWWsB"
              />
            </SSRProvider>
          </ToastProvider>
        </PortalProvider>
      </HybridProvider>
    </SafeAreaProvider>
  </NativeBaseConfigProviderProvider>
</ContextProvider>
`;

exports[`BuyDockScreenScreen should render correctly 1`] = `
<RNCSafeAreaView
  style={
    Object {
      "backgroundColor": "#000",
      "flex": 1,
    }
  }
  testID="BuyDockScreenScreen"
>
  <AppGlobalHeader />
  <Memo(ForwardRef(Box))
    flex={1}
  >
    <Memo(ForwardRef(Box))
      flex={1}
    >
      <TransakPaymentProvider
        partnerOrderId="fd1b4a14-f4be-4218-9e76-4aec9c00db69"
        walletAddress="3C7Hq5jQGxeYzL7LnVASn48tEfr6D7yKtNYSuXcgioQoWWsB"
      />
    </Memo(ForwardRef(Box))>
  </Memo(ForwardRef(Box))>
</RNCSafeAreaView>
`;
